--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,14 @@
 .asdih {
   width: 100%;
   height: 100vh;
-  background-color: #a5a181;
+  background-color:#c4c2b5;
   overflow: hidden;
   position: absolute;
   opacity: 0;
   visibility: hidden;
   animation: infinite;
+  position: absolute;
+  align-items: center;
+  flex-direction: column;
+  transition: all 0.3 ease-in-out;
 }
